added new test method that test edge case